--- a/app/auth/templates/auth/sign_up.html
+++ b/app/auth/templates/auth/sign_up.html
@@ -2,6 +2,37 @@
 {%- set page_title = 'Sign up please' %}
 {%- set page_description = 'Here you can create your account' %}
 {% block content -%}
-  {{ form.email.label }}
-  {{ form.email() }}
+<div class="row">
+  <div class="span4">
+    All fields are required. Please fill the form with care.
+  </div>
+  <div class="span12">
+    <form action="{{ url_for('auth.sign_up') }}" class="form-stacked" method="POST">
+      <fieldset>
+        <!-- <legend>Fill the form fields:</legend> -->
+        {% for field in form -%}
+          {% if field.type == 'HiddenField' -%}
+            {{ field() }}
+          {% else -%}
+            <div class="clearfix{% if field.errors %} error{% endif %}">
+            {{ field.label }}
+            <div class="input">
+            {%- if field.errors %}
+              {{ field(class='span5 error', placeholder=field.description) }}
+              <span class="help-inline">{{ field.errors|join(' ') }}</span>
+            {%- else %}
+              {{ field(class='span5', placeholder=field.description) }}
+            {% endif -%}
+            </div>
+          </div>
+          {%- endif %}
+        {%- endfor %}
+      </fieldset>
+      <div class="actions">
+        <input type="submit" class="btn primary" value="Sign Up!" />
+        <button type="reset" class="btn">Cancel</button>
+      </div>
+    </form>
+  </div>
+</div>
 {%- endblock content %}
