--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
     {% assets "css_all" -%}
       <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}" />
     {% endassets -%}
-    {% block css_extra %}{% endblock %}
+    {% block css_extra %}{% endblock -%}
   </head>
   <body>
   <div class="topbar">
@@ -17,7 +17,6 @@
           {{ config.SITE_TITLE }}
         </a>
         <ul class="nav secondary-nav">
-          {# <li><a>{{ request.endpoint }}</a></li> #}
           {{ nav_li('auth.sign_up', 'Sign Up') }}
           {{ nav_li('auth.sign_in', 'Sign In') }}
         </ul>
@@ -25,19 +24,19 @@
     </div>
   </div>
   <div class="content">
-    {% block content_wrapper -%}
+    {%- block content_wrapper %}
     <div class="container">
-      {% block content_title -%}
+      {%- block content_title %}
       <div class="page-header">
         <h1>{{ page_title }} <small>{{ page_description }}</small></h1>
       </div>
-      {% endblock -%}
-      {% block content %}{% endblock %}
-    {% endblock content_wrapper -%}
+      {%- endblock %}
+      {%- block content %}{%- endblock %}
+    {%- endblock content_wrapper %}
   </div>
-{% assets "js_all" -%}
+{%- assets "js_all" %}
   <script type="text/javascript" src="{{ ASSET_URL }}"></script>
 {% endassets -%}
-{% block js_extra %}{% endblock %}
+{%- block js_extra %}{% endblock -%}
   </body>
 </html>
