Generalized flash messages macro. Made a method for generating unique token for password reqovery. Made stub for password recovery view. Created password recovery form

--- a/app/templates/_base_macro.html
+++ b/app/templates/_base_macro.html
@@ -36,3 +36,11 @@
   </div>
 </form>
 {%- endmacro %}
+{%- macro flash_messages() %}
+  {%- for category, message in get_flashed_messages(with_categories=true) %}
+  <div class="alert-message {{ category }} fade in" data-alert="alert">
+    <a class="close" href="#">×</a>
+    <p>{{ message|safe }}</p>
+  </div>
+  {%- endfor %}
+{%- endmacro %}
