--- a/app/auth/templates/auth/recover.html
+++ b/app/auth/templates/auth/recover.html
@@ -1,3 +1,14 @@
 {% extends "base.html" -%}
 {% from "_base_macro.html" import render_form -%}
 {% set page_title = 'Password recovery' -%}
+{%- block content %}
+<div class="row">
+  <div class="span4">
+    <p>Here you can request a link for password reset.</p>
+    <p>We'll send a special link to the email you provided us with at
+    the signing up time.</p>
+  </div>
+  <div class="span12">
+  </div>
+</div>
+{%- endblock content %}
