--- a/app/auth/templates/auth/sign_in.html
+++ b/app/auth/templates/auth/sign_in.html
@@ -1,5 +1,5 @@
 {%- extends "base.html" %}
-{%- from "_base_macro.html" import render_form %}
+{%- from "_base_macro.html" import render_form, flash_messages %}
 {%- set page_title = 'Sign In' %}
 {%- set page_description = 'Site entrance is here' %}
 {%- block content %}
@@ -8,17 +8,12 @@
     <p>All fields are required. Please fill the form with care.</p>
     <p>
       If you fill yourself as been forgoten your password, proceed to
-      the <a href="{{ url_for('auth.recover') }}">password recover</a>
+      the <a href="{{ url_for('auth.recover_ask') }}">password recover</a>
       page.
     </p>
   </div>
   <div class="span12">
-    {%- for category, message in get_flashed_messages(with_categories=true) %}
-    <div class="alert-message {{ category }} fade in" data-alert="alert">
-      <a class="close" href="#">×</a>
-      <p>{{ message|safe }}</p>
-    </div>
-    {%- endfor %}
+    {{ flash_messages() }}
     {{ render_form(form, 'auth.sign_in', 'Sign In!') }}
   </div>
 </div>
