Done with password reset form, verification and processing

--- a/app/auth/templates/auth/recover_ask.html
+++ b/app/auth/templates/auth/recover_ask.html
@@ -6,7 +6,7 @@
   {%- if session.get('recover_sent') %}
   {{ flash_messages() }}
   <div class="span16">
-    <h3>Check your email inbox or try to request password recovery a bit
+    <h3>Check your email inbox or try to request password recovery again a bit
       later.</h3>
   </div>
   {%- else %}
