--- a/app/auth/templates/auth/sign_in.html
+++ b/app/auth/templates/auth/sign_in.html
@@ -5,7 +5,7 @@
 {%- block content %}
 <div class="row">
   <div class="span4">
-    <p>All fields are required. Please fill the form with care.</p>
+    <h4>All fields are required. Please fill the form with care.</h4>
     <p>
       If you fill yourself as been forgoten your password, proceed to
       the <a href="{{ url_for('auth.recover_ask') }}">password recover</a>
