--- a/app/auth/templates/auth/profile.html
+++ b/app/auth/templates/auth/profile.html
@@ -1,3 +1,25 @@
 {% extends "base.html" %}
 {%- set page_title = 'This is your profile' %}
 {%- set page_description = [user.first_name, user.last_name]|join(' ') %}
+{%- block content %}
+<div class="row">
+  <ul class="pills">
+    <li class="active"><a href="#">View</a></li>
+    <li><a href="#">Edit</a></li>
+    <li><a href="#">Settings</a></li>
+  </ul>
+</div>
+<div class="row">
+  <div class="span4">
+    <dl>
+      <dt>First name:</dt>
+      <dd>{{ user.first_name }}</dd>
+      <dt>Last name:</dt>
+      <dd>{{ user.last_name }}</dd>
+      <dt>Last logged in:</dt>
+      <dd>{{ user.last_logged_in.strftime("%Y-%m-%d %H:%M") }}</dd>
+    </dl>
+
+  </div>
+</div>
+{%- endblock content %}
