--- a/app/static/sass/screen.sass
+++ b/app/static/sass/screen.sass
@@ -9,3 +9,10 @@
 
 .content
   margin-top: 60px
+  .container
+    dl.profile-details
+      dt
+        +float('left')
+        margin-right: 1em
+        text-align: right
+        width: 150px
