--- a/app/auth/templates/auth/sign_up.html
+++ b/app/auth/templates/auth/sign_up.html
@@ -3,12 +3,25 @@
 {%- set page_title = 'Sign up please' %}
 {%- set page_description = 'Here you can create your account' %}
 {%- block content %}
+{%- if finished %}
 <div class="row">
-  <div class="span4">
-    All fields are required. Please fill the form with care.
-  </div>
-  <div class="span12">
-    {{ render_form(form, 'auth.sign_up', 'Sign Up!', 'Cancel') }}
+  <div class="span16">
+    <h4>Congratulations! You have already registered!</h4>
+    <p>
+    Please check your mailbox for a message with the activation link.
+    After proceeding this link you will be able to login to the
+    {{ config.SITE_TITLE }}.
+    </p>
   </div>
 </div>
+{%- else %}
+  <div class="row">
+    <div class="span4">
+      All fields are required. Please fill the form with care.
+    </div>
+    <div class="span12">
+      {{ render_form(form, 'auth.sign_up', 'Sign Up!', 'Cancel') }}
+    </div>
+  </div>
+{%- endif %}
 {%- endblock content -%}
