--- a/app/auth/templates/auth/email/recovery.html
+++ b/app/auth/templates/auth/email/recovery.html
@@ -5,7 +5,7 @@ You've requested password recovery for {{ config.SITE_TITLE }}. If this is not y
 Elsewere, please follow the link to get the page where you can set a new password for you account:
 http://{{ hostname }}{{ url_for('auth.recover_finish', token=user.create_token()) }}
 
-Please, don't reply on this message, follow the suppor email address listed at {{ hostname }}.
+Please, don't reply this message, follow the suppor email address listed at {{ hostname }}.
 
 
 --
