--- a/app/auth/templates/auth/profile.html
+++ b/app/auth/templates/auth/profile.html
@@ -17,7 +17,7 @@
       <dt>Last name:</dt>
       <dd>{{ user.last_name }}</dd>
       <dt>Last logged in:</dt>
-      <dd>{{ user.last_logged_in.strftime("%Y-%m-%d %H:%M") }}</dd>
+      <dd>{{ user.logged_at.strftime("%Y-%m-%d %H:%M") }}</dd>
     </dl>
 
   </div>
