Added localization support & pagination

--- a/app/catalog/templates/catalog/list_categories.html
+++ b/app/catalog/templates/catalog/list_categories.html
@@ -14,7 +14,11 @@
 {%- block content %}
 {{ pane() }}
 <div class="row">
-  <div class="span16">
+{%- for category in categories %}
+  <div class="span3">
+    {{ category.l_title }}
   </div>
+{%- endfor %}
 </div>
+{%- include "pagination.html" %}
 {%- endblock content %}
