Renamed profile views

--- a/app/auth/templates/auth/profile_toolbar.html
+++ b/app/auth/templates/auth/profile_toolbar.html
@@ -1,6 +1,6 @@
 {%- from "_base_macro.html" import nav_li with context %}
 <ul class="pills">
-  {{ nav_li('.profile', 'View') }}
+  {{ nav_li('.view_profile', 'View') }}
   {{ nav_li('.edit_profile', 'Edit') }}
-  {{ nav_li('.settings', 'Settings') }}
+  {{ nav_li('.setup_profile', 'Settings') }}
 </ul>
