--- a/app/auth/templates/auth/profile_view.html
+++ b/app/auth/templates/auth/profile_view.html
@@ -2,7 +2,7 @@
 {%- set page_title = 'This is your profile' %}
 {%- set page_description = [user.first_name, user.last_name]|join(' ') %}
 {%- block content %}
-{%- include "auth/toolbar.html" %}
+{%- include "auth/profile_toolbar.html" %}
 <div class="row">
 </div>
 <div class="row">
