--- a/app/auth/templates/auth/sign_up.html
+++ b/app/auth/templates/auth/sign_up.html
@@ -20,7 +20,7 @@
       All fields are required. Please fill the form with care.
     </div>
     <div class="span12">
-      {{ render_form(form, 'auth.sign_up', 'Sign Up!', 'Cancel') }}
+      {{ render_form(form, '.sign_up', 'Sign Up!', 'Cancel') }}
     </div>
   </div>
 {%- endif %}
