Replaced property with localisation-dependent one

--- a/app/catalog/templates/catalog/list_categories.html
+++ b/app/catalog/templates/catalog/list_categories.html
@@ -16,7 +16,7 @@
 <div class="row">
 {%- for category in categories %}
   <div class="span3">
-    {{ category.l_title }}
+    {{ category.title }}
   </div>
 {%- endfor %}
 </div>
