--- a/app/auth/templates/auth/email/activate.html
+++ b/app/auth/templates/auth/email/activate.html
@@ -2,7 +2,7 @@ Hello, {{ user.first_name }}!
 
 You have to confirm your email address to activate your account at {{ SITE_TITLE }}.
 
-Please, follow this link: http://{{ hostname }}{{ url_for('auth.sign_up', token=user.create_token()) }}
+Please, follow this link: http://{{ hostname }}{{ url_for('auth.activate', token=user.create_token()) }}
 
 Please, don't reply this message, follow the suppor email address listed at {{ hostname }}.
 
