--- a/app/static/sass/screen.sass
+++ b/app/static/sass/screen.sass
@@ -7,8 +7,9 @@
 @import compass/reset
 @import compass_twitter_bootstrap
 
+body
+  padding-top: 60px
 .content
-  margin-top: 60px
   .container
     dl.profile-details
       dt
@@ -20,3 +21,5 @@
 .row
   .huge
     height: 2.5em
+  &.categories > [class*="span"]
+    padding-bottom: 10px
