Added ability to mark record

--- a/app/catalog/templates/catalog/_list_records.html
+++ b/app/catalog/templates/catalog/_list_records.html
@@ -5,7 +5,8 @@
       <small>{{ record.created_at.strftime("%d.%m.%Y") }}</small>
     </h3>
     <div class="mark">
-      <a href="{{ url_for('.mark_record', key=record.key.urlsafe()) }}">mark</a>
+      <a href="{{ url_for('.mark_record', key=record.key.urlsafe()) }}">
+        {%- if record.is_marked %}unmark{%- else %}mark{%- endif %}</a>
     </div>
     <p>{{ record.description }}</p>
   </div>
