--- a/app/static/sass/screen.sass
+++ b/app/static/sass/screen.sass
@@ -23,11 +23,12 @@ body
     height: 2.5em
   &.categories > [class*="span"]
     padding-bottom: 10px
-  &.record
-    .span13
-      position: relative
-      .mark
-        display: none
-        position: absolute
-        top: 5px
-        right: 10px
+  .record
+    position: relative
+    .mark
+      display: none
+      position: absolute
+      top: 5px
+      right: 10px
+  .visit-selected
+    display: none
