--- a/app/catalog/templates/catalog/create_record.html
+++ b/app/catalog/templates/catalog/create_record.html
@@ -1,14 +1,14 @@
-{%- extends "base.html" %}
+{%- extends "core/base.html" %}
 {% from "_base_macro.html" import render_form %}
-{%- set page_title = "Create record for '" + category.title + "' category"%}
+{%- set page_title = _("Create record for %(cat)s category")|format(cat=category.title) %}
 {%- set create_record = url_for('.create_record', key=category.key.urlsafe()) %}
 {%- block content %}
 <div class="row">
   <div class="span6">
-    <p>All fields are required</p>
+    <p>{{ _('All fields are required') }}</p>
   </div>
   <div class="span10">
-    {{ render_form(form, 'catalog.create_record', 'Save', 'Cancel') }}
+    {{ render_form(form, 'catalog.create_record', _('Save'), _('Cancel')) }}
   </div>
 </div>
 {%- endblock content %}
