--- a/app/auth/templates/auth/email/activate.html
+++ b/app/auth/templates/auth/email/activate.html
@@ -1,11 +1,8 @@
-Hello, {{ user.first_name }}!
+{{ _('Hello') }}, {{ user.first_name }}!
 
-You have to confirm your email address to activate your account at {{ SITE_TITLE }}.
-
-Please, follow this link: http://{{ hostname }}{{ url_for('auth.activate', token=user.create_token()) }}
-
-Please, don't reply this message, follow the suppor email address listed at {{ hostname }}.
-
+{{ _('You have to confirm your email address to activate your account at %(site)s')|format(site=SITE_TITLE) }}.
+{{ _('Please, follow this link: http://%(hostname)s%(path)s')|format(hostname=hostname, path=url_for('auth.activate', token=user.create_token())) }}
+{{ _('Please, don't reply this message, follow the suppor email address listed at %(hostname)s')|format(hostname=hostname) }}.
 
 --
-Sincerely yours, {{ config.SITE_TITLE }} team.
+{{ _('Sincerely yours, %(site)s team.')|format(site=config.SITE_TITLE) }}
