--- a/app/auth/templates/auth/email/recovery.html
+++ b/app/auth/templates/auth/email/recovery.html
@@ -1,12 +1,10 @@
-Hello, {{ user.first_name }}!
+{{ _('Hello') }}, {{ user.first_name }}!
 
-You've requested password recovery for {{ config.SITE_TITLE }}. If this is not you want or you didn't do that, just delete this message.
+{{ _('You've requested password recovery for %(site)s. If this is not you want or you didn't do that, just delete this message.')|format(site=site) }}
+{{ _('Elsewere, please follow the link to get the page where you can set a new password for you account:') }}
+{{ _('http://%(hostname)s%(path)s')|format(hostname=hostname,path=url_for('auth.finish_recovery', token=user.create_token()) }}
 
-Elsewere, please follow the link to get the page where you can set a new password for you account:
-http://{{ hostname }}{{ url_for('auth.finish_recovery', token=user.create_token()) }}
-
-Please, don't reply this message, follow the suppor email address listed at {{ hostname }}.
-
+{{ _('Please, don't reply this message, follow the suppor email address listed at %(hostname)s')|format(hostname=hostname) }}.
 
 --
-Sincerely yours, {{ config.SITE_TITLE }} team.
+{{ _('Sincerely yours, %(site)s team.')|format(site=config.SITE_TITLE) }}
