--- a/app/auth/templates/auth/profile_toolbar.html
+++ b/app/auth/templates/auth/profile_toolbar.html
@@ -1,6 +1,6 @@
 {%- from "_base_macro.html" import nav_li with context %}
 <ul class="pills">
-  {{ nav_li('auth.view_profile', 'View') }}
-  {{ nav_li('auth.edit_profile', 'Edit') }}
-  {{ nav_li('auth.setup_profile', 'Settings') }}
+  {{ nav_li('auth.view_profile', _('View')) }}
+  {{ nav_li('auth.edit_profile', _('Edit')) }}
+  {{ nav_li('auth.setup_profile', _('Settings')) }}
 </ul>
