--- a/app/catalog/templates/catalog/_list_records.html
+++ b/app/catalog/templates/catalog/_list_records.html
@@ -1,12 +1,14 @@
-{%- for record in records %}
-<div class="span13 record">
-  <h3>{{ record.title }}
-    <small>{{ record.created_at.strftime("%d.%m.%Y") }}</small>
-  </h3>
-  <div class="mark">
-    <a href="{{ url_for('.mark_record', key=record.key.urlsafe()) }}">
-      {%- if record.is_marked %}unmark{%- else %}mark{%- endif %}</a>
+{%- macro list_records(records, span) %}
+  {%- for record in records %}
+  <div class="{{ span }} record">
+    <h3>{{ record.title }}
+      <small>{{ record.created_at.strftime("%d.%m.%Y") }}</small>
+    </h3>
+    <div class="mark">
+      <a href="{{ url_for('.mark_record', key=record.key.urlsafe()) }}">
+        {%- if record.is_marked %}{{ _('unmark') }}{%- else %}{{ _('mark') }}{%- endif %}</a>
+    </div>
+    <p>{{ record.description }}</p>
   </div>
-  <p>{{ record.description }}</p>
-</div>
-{%- endfor %}
+  {%- endfor %}
+{%- endmacro %}
