Updated translations and templates paths

--- a/app/auth/templates/auth/sign_in.html
+++ b/app/auth/templates/auth/sign_in.html
@@ -1,4 +1,4 @@
-{%- extends "core/base.html" %}
+{%- extends "base.html" %}
 {%- from "_base_macro.html" import render_form, flash_messages %}
 {%- set page_title = _('Sign In') %}
 {%- set page_description = _('Site entrance is here') %}
