--- a/app/auth/templates/auth/profile_edit.html
+++ b/app/auth/templates/auth/profile_edit.html
@@ -1,4 +1,4 @@
-{% extends "core/base.html" %}
+{% extends "base.html" %}
 {% from "_base_macro.html" import render_form %}
 {%- set page_title = _('This is your profile') %}
 {%- set page_description = [user.first_name, user.last_name]|join(' ') %}
