--- a/app/auth/templates/auth/profile_setup.html
+++ b/app/auth/templates/auth/profile_setup.html
@@ -1,4 +1,4 @@
-{%- extends "core/base.html" %}
+{%- extends "base.html" %}
 {%- set page_title=_('Setup Profile') %}
 {%- set page_description = _('Chose categories for filtering') %}
 
