--- a/app/auth/templates/auth/profile_view.html
+++ b/app/auth/templates/auth/profile_view.html
@@ -1,4 +1,4 @@
-{% extends "core/base.html" %}
+{% extends "base.html" %}
 {%- set page_title = _('This is your profile') %}
 {%- set page_description = [user.first_name, user.last_name]|join(' ') %}
 {%- block content %}
