--- a/app/auth/templates/auth/recover_ask.html
+++ b/app/auth/templates/auth/recover_ask.html
@@ -1,4 +1,4 @@
-{% extends "core/base.html" -%}
+{% extends "base.html" -%}
 {% from "_base_macro.html" import render_form, flash_messages -%}
 {% set page_title = _('Password recovery') -%}
 {%- block content %}
