--- a/app/auth/templates/auth/recover_finish.html
+++ b/app/auth/templates/auth/recover_finish.html
@@ -1,9 +1,9 @@
-{%- extends "core/base.html" %}
+{%- extends "base.html" %}
+{%- from "_base_macro.html" import render_form, flash_messages %}
 {%- set page_title=_('Setup Profile') %}
 {%- set page_description = _('Chose categories for filtering') %}
 
 {%- block content %}
-{%- from "_base_macro.html" import render_form, flash_messages %}
 {%- set page_title = _('Password recovery') %}
 {%- set page_description = _('reset your password here') %}
 {%- block content %}
