--- a/app/auth/templates/auth/sign_up.html
+++ b/app/auth/templates/auth/sign_up.html
@@ -1,4 +1,4 @@
-{%- extends "core/base.html" %}
+{%- extends "base.html" %}
 {%- from "_base_macro.html" import render_form %}
 {%- set page_title = _('Sign up please') %}
 {%- set page_description = _('Here you can create your account') %}
