--- a/app/catalog/templates/catalog/create_category.html
+++ b/app/catalog/templates/catalog/create_category.html
@@ -1,6 +1,6 @@
-{%- extends "core/base.html" %}
-{%- set page_title=_("Add New Category") %}
+{%- extends "base.html" %}
 {% from "_base_macro.html" import render_form %}
+{%- set page_title=_("Add New Category") %}
 
 {%- block content %}
 <div class="row">
