--- a/app/catalog/templates/catalog/list_categories.html
+++ b/app/catalog/templates/catalog/list_categories.html
@@ -1,4 +1,4 @@
-{%- extends "core/base.html" %}
+{%- extends "base.html" %}
 {%- set page_title = _("Categories list") %}
 {%- set create_category = url_for('catalog.create_category') %}
 
