--- a/app/catalog/templates/catalog/selected_records.html
+++ b/app/catalog/templates/catalog/selected_records.html
@@ -1,4 +1,4 @@
-{%- extends "core/base.html" %}
+{%- extends "base.html" %}
 {%- from "catalog/_list_records.html" import list_records %}
 {%- set page_title = _("Selected records") %}
 {%- block content %}
